--- a/templates/add_client.html
+++ b/templates/add_client.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Звонок</title>
+    <title>{% block title %}{% endblock %} Звонок</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color: rgb(228, 229, 230);"">
 
 <div class="container mt-5"">
-    <h3 class="mb-4">Заполните форму и мы Вам перезвоним!</h3>
+    <h3 class="mb-4">{% block content %}{% endblock %} Заполните форму и мы Вам перезвоним!</h3>
 
     <div class="card">
         <div class="card-body">
