--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,12 @@
                             <a class="nav-link" href="{{ url_for('login') }}">Войти</a>
                         </li>
                     {% endif %}
+                    <li>                            
+                        <a class="nav-link" href="{{url_for('botai')}}">Спросить</a>
+                    </li>
+                     <li>
+                             <a class="nav-link" href="{{ url_for('add_client') }}">Звонок</a>
+                     </li>
                 </ul>
             </div>
         </div>
