--- a/templates/botai.html
+++ b/templates/botai.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
+    <!-- SEO Метатеги -->
+    <meta name="description" content="Лучший магазин строительных материалов: доступные цены, высокое качество и быстрая доставка. Заказывайте материалы прямо сейчас!">
+    <meta name="keywords" content="строительные материалы, купить стройматериалы, доставка стройматериалов, магазин стройматериалов">
+    <meta name="robots" content="botai, follow">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
