--- a/templates/pokupka.html
+++ b/templates/pokupka.html
@@ -1,5 +1,10 @@
 {% extends "add_client.html" %}
 
 {% block title %}{% endblock %}
+<!-- SEO Метатеги -->
+<meta name="description" content="Лучший магазин строительных материалов: доступные цены, высокое качество и быстрая доставка. Заказывайте материалы прямо сейчас!">
+<meta name="keywords" content="строительные материалы, купить стройматериалы, доставка стройматериалов, магазин стройматериалов">
+<meta name="robots" content="pokupka, follow">
 
-{% block content %}{% endblock%}
+{% block content %}
+{% endblock%}
